--- a/ESP/ESP/main.resx
+++ b/ESP/ESP/main.resx
@@ -117,4 +117,58 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="notifyIcon1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="notifyIcon1.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAIAEBAAAAEACABoBQAAJgAAABAQAAABACAAaAQAAI4FAAAoAAAAEAAAACAAAAABAAgAAAAAAAAB
+        AAAAAAAAAAAAAAABAAAAAQAAAAAAADEeIQAjIiIALSAlACYlLgA0IiQAMyUqACcnNQAoJzUAIy0xAC0q
+        MgApKTYALiw2ACoqOQAtLDsALSw9ADUqMwA3MDIAOTIzADs4NgAyMDsAMzI+AEMsNQBANzgASDQ6AEE/
+        PQBKQD8APTNCADw2QgA9OEEAPz5GADw3SAAiM28AQDpEAEM/SABGP0kALEdNADFUWwAdWncARkFLAE9L
+        VABUSFcAUkxWAEJTVQBWUFkAW1RaAGJJUQBVdnsAY2BpAGVjagBxZmMAcWxvAHZwcgCDYWYAgndzADVs
+        gwBcd5IARVa8ACIdyQAtLP8AGGLrABqI2AADi/kAEpv/ACCd/wAcsPkAK6X/ADCp/wA9rv8AQKP5AB7T
+        /wArzv8AN8//ACfZ/wBny9UAXd3+AHDV4AB91+EAedvlAHfe6QB53ukAfeHsAGLi/wCfn54AppuYALSn
+        qACS4+kAjufxAIXp9ACJ6vUAkOjxAJLt+QCU8/8Al/T/AJrz/wCd9P8AqufpAKTs9QCl7/kAo/T/AKn0
+        /wCt9f8AsvX/ALX1/wC69/8A1szJAMT3/ADO+f8A2/r/AOH7/wDk/P8A7f3/APH+/wD3//8A+v//AP//
+        /wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAE1PT09MTEpKT00AAAAAAFBiZ2VjW05PSkpPTwAAAFprb3Bu
+        aGNfWU9KUVhXAABibnJycGpnX19ZUUpcTwAAZ25gcnBrUGVfXEpYUFgAAGdhbG5WPDtYX0o7XEpcAABn
+        TzlnN0VDP0o+JiA6WAAATzgrPUtSRklHSEElGAAAAAATBwckREJARC8JEBIAAAAAGQ8PVHIsLHJpEA8R
+        AAAAABoPD3IFMTEBchUPFwAAAAA2HBxVcioqclQCCjIAAAAAACcfKi4WAxANBwoAAAAAAAAAIyM1GAYJ
+        DxQAAAAAAAAAAAA0IyEdIzMAAAAAAAAAAAAAAAAAAAAAAAAAAADgBwAAwAMAAIABAACAAQAAgAEAAIAB
+        AACAAQAAgAMAAMADAADAAwAAwAMAAMADAADgBwAA8A8AAPgfAAD//wAAKAAAABAAAAAgAAAAAQAgAAAA
+        AABABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAH3X4f933un/d97p/3fe6f9w1eD/cNXg/2fL
+        1f9ny9X/d97p/33X4f8AAAAAAAAAAAAAAAAAAAAAAAAAAHne6f+m7/n/tfb//631//+j9P//ku35/3nb
+        5f933un/Z8vV/2fL1f933un/d97p/wAAAAAAAAAAAAAAAJDo8f/O+f//7f3///L+///k/P//uvf//6P0
+        //+d9P//iur1/3fe6f9ny9X/f+Hs/4Xp9P+O5/H/AAAAAAAAAACl7/n/5vz///v////3////8f///8T3
+        /P+09v//n/T//5rz//+J6vX/fOLt/2fL1f+U8///d97p/wAAAAAAAAAAtvb//+H7//+q5+n/+f////L/
+        ///O+f//et/p/6n0//+b8///l/T//2fL1f+H6fX/d97p/4Xp9P8AAAAAAAAAALT1//+k7PX/2/r//+T8
+        //+S4+n/GGLr/y0s//+F6fT/nPT//2fL1f8tLP//lPP//2fL1f+U8///AAAAAAAAAACy9f//eN7p/0VW
+        vP+29v//NWyD/0Cj+f8wqf//Epv//2fL1f8Di/n/HVp3/yIzb/8iHcn/hen0/wAAAAAAAAAAd97p/1x3
+        kv9CU1X/GojY/13d/v9i4v//HtP//yfZ//8rzv//N8///xyw+f8xVFv/SDU5/wAAAAAAAAAAAAAAAAAA
+        AAA7ODb/Jyc1/ycnNf8sR03/P6///yul//8gnf//PK7//1V2e/8jLTH/NSoz/zkyM/8AAAAAAAAAAAAA
+        AAAAAAAAQT89/y0tP/8sLD3/ppuY//////9WUFn/W1Ra///////WzMn/Lyoy/y8tPP83MDL/AAAAAAAA
+        AAAAAAAAAAAAAEpAP/8tLDv/LS0///////80IiT/ZWNq/2Ngaf8xHiH//////zMyPv8tLD3/QDc4/wAA
+        AAAAAAAAAAAAAAAAAACCd3P/PDZC/z0zQv+0p6j//////1JMVv9PS1T//////5+fnv8jIiL/LCoy/3Fm
+        Y/8AAAAAAAAAAAAAAAAAAAAAuba3eEZBS/88N0j/VEhX/2JJUf9DLDX/LSAl/y8tNv8pKTb/JiUu/y0s
+        Nv+5trd4AAAAAAAAAAAAAAAAAAAAAAAAAAC5trd4Qz9I/0c/Sv+DYWb/STQ7/zMlKv8oJzX/Kio5/zIw
+        O/+5trd4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB2cHL/Rj9I/0A6RP89OEH/Pz5G/3Fs
+        b/8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADgBwAAwAMAAIABAACAAQAAgAEAAIABAACAAQAAgAMAAMAD
+        AADAAwAAwAMAAMADAADAAwAA4AcAAPgfAAD//wAA
+</value>
+  </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>135, 17</value>
+  </metadata>
 </root>
